# give-me-insights-backend

./: .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build_and_push.yaml
.scripts/: build.sh  create-version-tag.sh  deploy.sh
app/: .env.example
app/apps/: urls.py
app/apps/Account/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
app/apps/Account/fixtures/: company.json
app/apps/Account/migrations/: 0001_initial.py
app/apps/Projects/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/apps/Projects/management/commands/: __init__.py  consume_data_inbound.py  grouper.py  insert_rfmt.py  (+1 more)
app/apps/Projects/migrations/: 0001_initial.py  0002_alter_project_unique_together_datasource.py  0003_alter_datasource_key_alter_datasource_project_and_more.py  0004_event.py  0005_alter_event_is_expected_alter_projectlink_url_and_more.py  0006_alter_datasource_key_alter_event_key_and_more.py  0007_alter_sourcedatarowraw_source.py  0008_alter_sourcedatarowraw_options.py  0009_alter_datasource_key_alter_event_key_and_more.py  0010_groupedsourcedata.py  0011_alter_groupedsourcedata_unique_together.py  0012_aggregationcontrol.py  0013_alter_groupedsourcedata_unique_together.py  0014_aggregationcontrol_is_in_progress_and_more.py
app/config/: settings.py  urls.py
app/config/settings/: __init__.py  _base.py  local.example.py  prod.py
app/templates/: asset-manifest.json  index.html
app/utils/: __init__.py
